@@ -136,11 +136,7 @@ def attach_src(file_name, page = @page)
       line = 0
       content.collect! {|i| sprintf("%3d| %s", line+=1, i)}
     end
-<<<<<<< HEAD:misc/plugin/attach.rb
     s << h(content.join).gsub(/^\t+/) {|t| tabstop * t.size}.to_utf8
-=======
-    s << h(content.join).gsub(/^\t+/) {|t| tabstop * t.size}.to_euc
->>>>>>> 1463087... use Hiki::Util's utility methods instead of CGI's utility methods:misc/plugin/attach.rb
     s << %Q!</pre>!
   end
 end
@@ -155,11 +151,15 @@ end
 
 def attach_page_files
 <<<<<<< HEAD:misc/plugin/attach.rb
+<<<<<<< HEAD:misc/plugin/attach.rb
   result = []
   attach_path = "#{@cache_path}/attach/#{escape(@page)}".untaint
   if FileTest.directory?(attach_path)
 =======
   result = Array::new
+=======
+  result = []
+>>>>>>> 38587ca... use literal instead of obvious new method.:misc/plugin/attach.rb
   attach_path = "#{@cache_path}/attach/#{escape(@page)}".untaint
   if FileTest::directory?(attach_path)
 >>>>>>> 1463087... use Hiki::Util's utility methods instead of CGI's utility methods:misc/plugin/attach.rb
